Revision history for Socialtext-Utils

0.17 - not yet released
  - improved/tweaked stu-most-wanted output to link to non-existent pages
  - added stu-local-copy tool for moving content between a workspace and local
    disk
  - made it so that a $pagename.sav file is always written to before the code
    dies --kevinj
  - don't add the tag template to pages when creating them from an actual
    template --kevinj

0.16 - Wed Aug  8 14:37:47 PDT 2007
  - fixed bug when PUTting pages with a '/' in the name
  - Added a WikiObject to return a .pre block on a page
  - refactored YAML WikiObject to use PreBlock package
  - Added a WikiObject for parsing two column tables into a hash
  - removed Socialtext::EditBlog

0.15 - Thu Jun 21 15:40:45 PDT 2007
  - fixed typo in .wikeditrc docs

0.14 - Thu May 31 10:24:37 PDT 2007
  - Added --tag to wikedit
  - fixed bug when editing pages that have a '/'
  - Updated MANIFEST, so stu-most-wanted is actually packaged :)

0.13 - Thu May 24 12:39:46 PDT 2007
  - Add stu-most-wanted which produces 'Most Wanted Pages' page
  - Socialtext::Resting::Getopt doesn't set pass_through globally
  - Socialtext::EditPage names the tempfiles more meaningfully
  - Added a .wiki extension to the tempfiles.
  - Made system() calls in EditPage take LIST form, rather than STRING.
  - added get_pages() to the mock rester

0.12 - Wed Mar 21 21:40:29 PDT 2007
  - Refactor Socialtext::Resting::Mock's tag and page handling
    - It's now more like an in-memory Socialtext::Rester
  - Added a primative Socialtext::EditBlog
  - Add stu-save-pages
  - Use /usr/bin/vim if no $EDITOR

0.11 - Sun Feb 25 10:54:55 PST 2007
  - YAML wiki object only looks for yaml in the first .pre block
  - Use Test::Mock::HTTP::Response in Socialtext::Rester::Mock

0.10 - Tue Feb 20 10:46:05 PST 2007
  - Copy tags from template pages when they're used
  - Add Socialtext::Resting::Getopt to handle command line args
  - Fix Mock Rester to match real library's get_pagetags()